# sevro

./: .dockerignore  .gitignore  .python-version  Dockerfile  conf.yaml  pyproject.toml
sevro/: config.py  download.py  logs.py  main.py  sevro.py
sevro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_sevro.py
